--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">SampleApp</string>
-    <string name="inputPromptText">Character number:</string>
+    <string name="app_name">SPACE</string>
+    <string name="inputPromptText">Enter name:</string>
     <string name="buttonLabel">Lookup</string>
     <string name="message">Done</string>
     <string name="fieldLabel0Text">Name:</string>
     <string name="fieldLabel1Text">Height (m):</string>
     <string name="fieldLabel2Text">Weight (kg):</string>
     <string name="fieldLabel3Text">Created on:</string>
-    <string name="errorLabelText">Enter a character number</string>
-    <string name="retryButtonLabel">RETRY</string>
+    <string name="errorLabelText">Enter a character name</string>
+    <string name="retryButtonLabel">Try Again</string>
 </resources>
